--- a/newsletter.html
+++ b/newsletter.html
@@ -6,7 +6,7 @@ layout: newsletter_summary
 <div>
 The HSF Newsletter is an occasional series of longer articles about the HSF,
 discussing workshops and other big activities. New newsletter articles are
-always announced on the <a href="http://groups.google.com/d/forum/hsf-forum">hsf-forum</a>.
+always announced on the <a href="https://groups.google.com/d/forum/hsf-forum">hsf-forum</a>.
 </div>
 <div class="row">
 
